update competition section and fix horizontal overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1601,3 +1601,7 @@ p {
 	text-transform: uppercase;
 	border-radius: 0;
 }
+
+.competition-blurb {
+	margin: 20px;
+}
